// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`platform/index escapes names 1`] = `"name [what]"`;

exports[`platform/index initializes 1`] = `
Object {
  "endpoint": "https://api.bitbucket.org/",
  "gitAuthor": "user@domain.com",
  "hostRules": Array [
    Object {
      "hostName": "api.bitbucket.org",
      "hostType": "bitbucket",
      "password": "123",
      "username": "abc",
    },
  ],
  "platform": "bitbucket",
}
`;

exports[`platform/index initializes no author 1`] = `
Object {
  "endpoint": "https://api.bitbucket.org/",
  "hostRules": Array [
    Object {
      "hostName": "api.bitbucket.org",
      "hostType": "bitbucket",
      "password": "123",
      "username": "abc",
    },
  ],
  "platform": "bitbucket",
}
`;

exports[`platform/index parses bot email 1`] = `
Object {
  "address": "some[bot]@users.noreply.github.com",
  "name": "some[bot]",
}
`;

exports[`platform/index parses bot name and email 1`] = `
Object {
  "address": "some[bot]@users.noreply.github.com",
  "name": "some[bot]",
}
`;
